<resources>
    <string name="app_name">To Do List</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="task_status">Task Status</string>
    <string name="save">Save</string>
    <string name="sort">Sort</string>
    <string name="sort_alp">Sort Alphabetically</string>
    <string name="search">Search</string>


    <string-array name="task_status">
        <item>Created</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Cancelled</item>
        <item>Failed</item>
    </string-array>
</resources>
