<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sort_id_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sort_by_id"
            android:text="@string/sort" />

        <Button
            android:id="@+id/sort_alp_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sort_by_alp"
            android:text="@string/sort_alp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_text_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:id="@+id/search_Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="searchTasks"
            android:text="@string/search" />
    </LinearLayout>

    <Button
        android:id="@+id/add_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addItem"
        android:text="@string/add" />

    <fragment
        android:id="@+id/list_frag"
        android:name="com.vaishakhiification.todolist.TaskListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>