<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/save_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/save" />

        <Button
            android:id="@+id/delete_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/delete" />
    </LinearLayout>

    <TextView
        android:id="@+id/taskId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <EditText
        android:id="@+id/taskName_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/taskStatus_Lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_status" />

        <Spinner
            android:id="@+id/taskStatus_ddl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/task_status" />

    </LinearLayout>

    <EditText
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp" />
</LinearLayout>